<resources>
    <string name="app_name">TuneME</string>
    <string name="discover">Discover</string>
    <string name="tune_app_icon">tune app icon</string>
    <string name="default_version">Version: 1.0.0</string>
    <string name="close_description">close button</string>
    <string name="intro_image">intro image</string>
    <string name="subtitle_0">Find and connect with new friends within your location reach and beyond</string>
    <string name="title_1">Unlimited Fun</string>
    <string name="subtitle_1">Share your life and personal experience with friends as pic and videos</string>
    <string name="title_2">Enjoy Movies</string>
    <string name="subtitle_2">Don\'t watch movies alone, connect with more than two people to enjoy live streaming together</string>
    <string name="start">Let\'s start!</string>
    <string name="back">back</string>
    <string name="create_account">Create Account</string>
    <string name="create">Create your new profile</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="license_agreement">By registering, you agree with our <b><a href="http://www.privacy-options.com">Privacy Policy</a></b>
        and <b><a href="http://www.terms-and-conditions.com">Terms and Conditions</a></b></string>
    <string name="signup_alt_text">OR SIGNUP VIA</string>
    <string name="google_sign_in">google sign in</string>
    <string name="sign_now">Already have an account? <b><a href="@login_page">Login</a></b></string>
    <string name="complete_profile">Complete Profile</string>
    <string name="complete_your_new_profile">Complete your new profile</string>
    <string name="upload">upload</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="complete">Complete</string>
    <string name="country">Country</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="add_followers">Add followers</string>
    <string name="next">NEXT</string>
    <string name="default_profile_name">Lynux Noah</string>
    <string name="default_username">\@noahweasley</string>
    <string name="add">Add</string>
    <string name="following">Following</string>
    <string name="content_loading">Loading more</string>
    <string name="verification">Verification</string>
    <string name="submit">SUBMIT</string>
    <string name="code_entry_message">Enter the SMS Code sent to</string>
    <string name="default_phone_number">+2347055478947</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="SIGN_IN_CLIENT_ID">"490372290045-rcpn8t98q20kvqek2qfh74g73a6dm481.apps.googleusercontent.com"</string>
    <string name="access_message">Login to access your account.</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login_now">Don\'t have an account yet?</string>
    <string name="forgot_password_2">Forgot Password</string>
    <string name="recovery_message">Restore your account</string>
    <string name="enter_email">Enter your email</string>
    <string name="notifications">notifications</string>
    <string name="title_notification">Notifications</string>
    <string name="_1">1</string>
    <string name="_99">99</string>
    <string name="add_post">add post</string>
    <string name="videos">Videos</string>
    <string name="products">Products</string>
    <string name="chats">Chats</string>
    <string name="more">More</string>
    <string name="home">Home</string>
    <string name="story_image">story image</string>
    <string name="create_post">Create Post</string>
    <string name="post">POST</string>
    <string name="post_hint">Write something</string>
    <string name="attach_picture">attach picture</string>
    <string name="attach_video">attach video</string>
    <string name="add_location">add location</string>
    <string name="attach_link">attach link</string>
    <string name="default_update_time">1 hour ago</string>
    <string name="default_message"><b>Noah wesley</b> liked your comment</string>
    <string name="video_all_caps">VIDEOS</string>
    <string name="movie_all_caps">MOVIES</string>
    <string name="others">OTHERS</string>

</resources>