<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/videos"
        android:icon="@drawable/ic_outline_videocam_24"
        android:title="@string/videos" />

    <item
        android:id="@+id/chats"
        android:icon="@drawable/ic_chat_bubble"
        android:title="@string/chats" />

    <item
        android:id="@+id/products"
        android:icon="@drawable/ic_outline_shopping_cart_24"
        android:title="@string/products" />

    <item
        android:id="@+id/more"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/more" />

</menu>