<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_chevron_left_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/access_message"
        android:textColor="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/user_name"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:textColorHint="@color/light_grey"
            tools:ignore="Autofill,LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/user_name_parent"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_outline_lock_24"
            android:drawableLeft="@drawable/ic_outline_lock_24"
            android:drawablePadding="8dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/light_grey"
            tools:ignore="Autofill,LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/persist_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:text="@string/remember_me"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@id/phone_number_parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_edges"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/persist_user"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/persist_user"
        app:layout_constraintEnd_toStartOf="@+id/right_guide" />

    <TextView
        android:id="@+id/gs_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="monospace"
        android:text="@string/signup_alt_text"
        app:layout_constraintBottom_toTopOf="@id/g_sign_parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <androidx.cardview.widget.CardView
        android:id="@+id/g_sign_parent"
        android:layout_width="42dp"
        android:layout_height="41dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp"
        app:contentPadding="8dp"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/gs_header"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/g_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/google_sign_in"
            android:src="@drawable/ic_icons8_google" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sign_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_now"
        android:textColorHighlight="@color/colorPrimary_5"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toBottomOf="@id/g_sign_parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/create_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_now" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9"
        tools:viewBindingIgnore="true" />

</androidx.constraintlayout.widget.ConstraintLayout>