<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/create"
        android:textColor="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_name_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/subtitle"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_alternate_email_24"
            android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/user_name"
            android:inputType="textVisiblePassword|textNoSuggestions"
            android:textColorHint="@color/light_grey"
            tools:ignore="Autofill,LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/right_guide"
        app:layout_constraintStart_toStartOf="@id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/user_name_parent"
        tools:viewBindingIgnore="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_phone_24"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="8dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColorHint="@color/light_grey"
            tools:ignore="Autofill,LabelFor" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_edges"
        android:text="@string/sign_up"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/right_guide"
        app:layout_constraintStart_toStartOf="@+id/left_guide"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_parent"
        app:layout_constraintVertical_bias="0.35000002" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1"
        tools:viewBindingIgnore="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9"
        tools:viewBindingIgnore="true" />

</androidx.constraintlayout.widget.ConstraintLayout>