<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@android:color/white">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/default_profile_name"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/user_name"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/default_username"
        android:textColor="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />

    <Button
        android:id="@+id/list_action"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:enabled="true"
        android:background="@drawable/bg_rounded_edges_fit"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/profile_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/list_action"
        app:layout_constraintStart_toStartOf="@id/profile_image" />

</androidx.constraintlayout.widget.ConstraintLayout>